--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^24.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.16",
     "jest": "^30.1.3",
     "lucide-react": "^0.544.0",
