--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@/*": ["src/*"]
     },
     "jsx": "react-jsx",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "module": "ESNext"
   },
   "include": ["src", "src/types/images.d.ts"]
 }
