--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
     "types": ["jest", "@testing-library/jest-dom"],
-    "lib": ["DOM", "ES2015"],
+    "target": "es2022",
+    "lib": ["DOM", "ES2022"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     },
     "jsx": "react-jsx",
     "esModuleInterop": true,
-    "module": "ESNext"
+    "moduleResolution": "node",
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "noEmit": true
   },
   "include": ["src", "src/types/images.d.ts"]
 }
