--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "ts-jest": "^29.4.4",
+    "vercel": "^48.1.6",
     "zod": "^4.1.9"
   },
   "devDependencies": {
